fixing tile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -144,23 +144,23 @@ html,body {
 }
 
 .c4 {
-	margin-left: 64vw;
+	margin-left: 65vw;
 }
 
 .r1 {
-	margin-top: 1vw;
+	margin-top: 0vw;
 }
 
 .r2 {
-	margin-top: 21vw;
+	margin-top: 20vw;
 }
 
 .r3 {
-	margin-top: 43vw;
+	margin-top: 42vw;
 }
 
 .r4 {
-	margin-top: 64vw;
+	margin-top: 63vw;
 }
 
 /* -- colors --- */
